# community_recipes

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/controllers/: auth_controller.rs
src/db/: comments.rs  mod.rs  ratings.rs  recipes.rs  users.rs
src/routes/: auth_route.rs  mod.rs
src/services/: auth_service.rs
