[package]
name = "community_recipe"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.203", features = ["serde_derive", "derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
